SingleProcessMash: Fix virtual keyboard not appearing in automation tree

The virtual keyboard is an embedded remote view. The window service
needs to use the embedded window tree to compute the transport ID for
the VK window.

This fixes the ash-to-chrome "fence hopping" code used by the
accessibility chrome.automation system to serialize the desktop UI tree.

Chrome OS only, see bug for more details.

Bug: 921405
Change-Id: I16bd2b4a6050729529a735ad9830609076008667
Reviewed-on: https://chromium-review.googlesource.com/c/1415259
Commit-Queue: Scott Violet <sky@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623547}
Former-commit-id: 5d72852411f01369cfa0a54066afbc319e3f9abd